# PlantCam

./: .classpath  .gitignore  CMakeLists.txt  build.sh
Android/gradle/wrapper/: gradle-wrapper.properties
GUI/: pom.xml
GUI/src/sample/: Controller.java  Main.java  Model.java  sample.fxml
PlantCam/: .gitignore  .project  CMakeLists.txt  main.cpp
PlantCam/Android/app/: build.gradle
PlantCam/Android/app/src/main/: AndroidManifest.xml
PlantCam/Android/app/src/main/java/com/plantcam/jacob/plantcam/: Config.java  Device.java  FindDevices.java  MainActivity.java
PlantCam/Android/app/src/main/res/layout/: device_row.xml
PlantCam/Android/app/src/main/res/values/: strings.xml
PlantCam/buildWin/: CMakeCache.txt
PlantCam/csharp/PhotogonIS/: PhotogonIS.sln
PlantCam/csharp/PhotogonIS/PhotogonIS/: Form1.Designer.cs  PhotogonIS.csproj
PlantCam/csharp/PhotogonIS/PhotogonIS/Properties/: Settings.Designer.cs
PlantCam/java/PlantCam/src/plantcam/: Broadcast.java  Config.java  Device.java  Master.java  PlantCam.java  Test.java
PlantCam/node/: CMakeLists.txt
PlantCam/node/include/: videoStream.hpp
PlantCam/node/src/: videoStream.cpp
PlantCam/plant-cam/plantcam-core/: pom.xml
PlantCam/plant-cam/plantcam-core/src/main/java/core/: Device.java  FTPServer.java  FindDevices.java  Master.java  Node.java  Responder.java
PlantCam/plant-cam/plantcam-gui/: pom.xml
PlantCam/plant-cam/plantcam-gui/src/main/java/gui/: Main.java  Model.java
PlantCam/plant-cam/plantcam-gui/src/main/java/gui/master/: StreamImageDecoder.java
PlantCam/qt/node/: qtvideostream.cpp  qtvideostream.hpp  videostream.hpp
PlantCam/sampleStreamer/: client.cpp
PlantCam/src/: stream.cpp
PlantCam/testing/: videoStream.cpp
include/: UDPClientServer.hpp  videoStream.hpp
node/: build.sh  install.sh
node/src/: main.cpp  videoStream.cpp
plant-cam/: pom.xml
plant-cam/plantcam-gui/: pom.xml
python/: server.py
qt/node/: node.pro
sampleStreamer/: client  server
src/: client  main.cpp  server  server.cpp  stream  stream.cpp  videoStream.cpp
(+55 files in other folders)
